@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-15T02:41:21Z",
+  "timestamp" : "2022-10-15T16:36:44Z",
   "count_outdated" : 833,
   "uniques_outdated" : 436,
-  "count" : 849,
-  "uniques" : 446,
+  "count" : 850,
+  "uniques" : 447,
   "clones" : [
     {
       "timestamp": "2022-10-01T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-10-14T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
